Added functionality to use EF with

--- a/app1/src/app/app.component.html
+++ b/app1/src/app/app.component.html
@@ -392,6 +392,7 @@
 
   <ul *ngIf="forecast">
     <li>Temperature C : {{ forecast.temperatureC }}</li>
+    <li>Last log: {{ forecast.lastMessage }}</li>
   </ul>
 
   <!-- Next Steps -->
